--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,13 +234,19 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
 }
+
+#reviews, #restaurant-content{
+  width: 50%;
+}
+
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
 }
 #reviews-container {
   padding: 30px 40px 80px;
