--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,8 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+	display flex;
+	flex-direction: column;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
