--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 100px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -115,6 +115,7 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
+	padding-top: 15px;
   margin: 0 20px;
 }
 .filter-options select {
