--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,7 @@ nav h1 a {
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 20px 30px 25px;
   text-align: left;
   width: 270px;
 	display flex;
