--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ nav h1 a {
 
 .filter-options {
   width: 100%;
-  height: 100px;
+  height: 100%;
   background-color: #3397DB;
   align-items: center;
 }
