--- a/css/styles.css
+++ b/css/styles.css
@@ -57,9 +57,10 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+	display: flex;
+	align-items: center;
 }
 nav h1 {
-	padding:15px 30px;
   margin: auto;
 }
 nav h1 a {
@@ -75,7 +76,6 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
@@ -102,6 +102,23 @@ nav h1 a {
     text-decoration: underline;
 }
 
+/* ====================== Skip Link ====================== */
+
+header .skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background: #ffa500;
+  color: white;
+  padding: 8px;
+  z-index: 100;
+  text-transform: uppercase;
+}
+
+header .skip-link:focus {
+  top: 0;
+}
+
 /* ====================== Map ====================== */
 
 #map {
@@ -117,6 +134,9 @@ nav h1 a {
   height: 100%;
   background-color: #3397DB;
   align-items: center;
+	padding: 15px 3% 0 3%;
+  display: flex;
+  flex-direction: column;
 }
 .filter-options h2 {
   color: white;
@@ -124,7 +144,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
 	padding-top: 15px;
-  margin: 0 20px;
+  margin: 0 0 20px 0;
 }
 .filter-options select {
   background-color: white;
@@ -133,7 +153,7 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 0 0 10px 0;
   padding: 0 10px;
   width: 200px;
 }
@@ -143,29 +163,27 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 20px 2%;
   text-align: center;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  margin: 15px 0;
   min-height: 380px;
-  padding: 20px 30px 25px;
+  padding: 0 4% 10px 4%;
   text-align: left;
-  width: 270px;
-	display flex;
-	flex-direction: column;
+  width: 100%;
+  min-width: 280px;
+  max-width: 400px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
-  width: 100%;
+	max-width: 100%;
+  min-width: 100%;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -197,18 +215,14 @@ nav h1 a {
 /* ====================== Restaurant Details ====================== */
 
 .inside header {
-  position: fixed;
-  top: 0;
   width: 100%;
   z-index: 1000;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: calc(100% - 80px);
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  height: 100vh;
+	margin: auto;
+	width: 100%;
 }
 .inside #map {
   background-color: #ccc;
@@ -216,12 +230,11 @@ nav h1 a {
   width: 100%;
 }
 .inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
+	text-align: center;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -231,7 +244,8 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 100%;
+	width: 90%;
+	border-radius: 15px 0 0 0;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -245,21 +259,24 @@ nav h1 a {
   letter-spacing: 10px;
   margin: 0 0 20px;
   padding: 2px 0;
+	border-radius: 0 0 15px 0;
   text-align: center;
   text-transform: uppercase;
+	width: 90%;
 }
-
 #reviews, #restaurant-content{
   width: 50%;
 }
-
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-	display: flex;
-	flex-direction: column;
-	overflow: hidden;
+	padding: 15px 3%;
+  width: 100%;
+  max-width: 560px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #reviews-container {
   padding: 30px 40px 80px;
@@ -294,31 +311,51 @@ nav h1 a {
 
 /* Adapt to screen */
 
-@media all and (max-width: 900px) {
-  #maincontent {
+/* ====================== Media Queries: 480px; ====================== */
+@media screen and (min-width: 480px) {
+  .filter-options {
+    display: block;
+  }
+  #neighborhoods-select {
+    margin: 0 20px 10px 0;
+  }
+}
+
+/* ====================== Media Queries: 600px; ====================== */
+@media screen and (min-width: 600px) {
+  #restaurants-list {
+    padding: 20px 30px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
-  .inside #map-container {
-    position: relative;
-    height: 300px;
-    width: 100%;
-    top: 130px;
-    padding-top: 0;
+  #restaurants-list li {
+    padding: 0 30px 10px 30px;
+    margin: 15px;
   }
-	#restaurant-content, #reviews {
-		width: 100%;
-	}
-	#restaurant-container, #reviews-container {
-		padding: 140px 30px 30px;
-	}
-	#reviews-container {
-		padding: 30px 25px 110px;
-	}
-  .inside #breadcrumb {
-    width: 100%;
+  #restaurant-container, #reviews-container {
+    padding: 20px 11px;
+    margin: auto;
   }
-  .inside #footer {
-    width: 100%;
+}
+
+/* ====================== Media Queries: 1150px; ====================== */
+@media screen and (min-width: 1150px) {
+  #reviews-container {
+    max-width: 1150px;
+  }
+  #reviews-list {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+}
+
+/* ====================== Media Queries: 1400px; ====================== */
+@media screen and (min-width: 1400px) {
+  .filter-options {
+    padding: 10px 30px 0 30px;
   }
 }
