--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ header .skip-link:focus {
   font-family: Arial,sans-serif;
   margin: 15px 0;
   min-height: 380px;
-  padding: 0 4% 10px 4%;
+  padding: 0 0 10px 0;
   text-align: left;
   width: 100%;
   min-width: 280px;
